tests/golden/lib/kyverno/tests/clusterrolebindingpatch.yaml
apiVersion: v1
data: {}
kind: ConfigMap
metadata:
  annotations:
    syn.tools/patch-md5: b8afb6063e06c5ffbaa115289f25b1b3
  labels:
    name: foo-test-5f124f8af545124-trigger
  name: foo-test-5f124f8af545124-trigger
  namespace: syn-kyverno
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations: {}
  labels:
    name: foo-test-5f124f8af545124
  name: foo-test-5f124f8af545124
spec:
  background: true
  mutateExistingOnPolicyUpdate: true
  rules:
    - match:
        any:
          - resources:
              kinds:
                - rbac.authorization.k8s.io/v1/ClusterRoleBinding
              names:
                - test
              namespaces:
                - foo
          - resources:
              kinds:
                - rbac.authorization.k8s.io/v1/ClusterRoleBinding
              names:
                - test
              namespaces:
                - foo
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              patched: ''
        targets:
          - apiVersion: rbac.authorization.k8s.io/v1
            kind: ClusterRoleBinding
            name: test
            namespace: foo
      name: foo-test-5f124f8af545124
