tests/golden/lib/kyverno/tests/clusterrolepatch.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations: {}
  labels:
    name: foo-test-2647e277de7e28f
  name: foo-test-2647e277de7e28f
spec:
  rules:
    - match:
        all:
          - resources:
              kinds:
                - rbac.authorization.k8s.io/v1/ClusterRole
              names:
                - test
              namespaces:
                - foo
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              patched: ''
      name: foo-test-2647e277de7e28f
